@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-27T08:21:39Z",
+  "timestamp" : "2023-10-27T16:22:19Z",
   "count_outdated" : 565,
   "uniques_outdated" : 268,
-  "count" : 601,
+  "count" : 602,
   "uniques" : 284,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
